refactor: refactoring server runner and make it more clean

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,17 @@ description = "Another SSR framework but built with MetaCall!"
 
 [dependencies]
 anyhow = "1.0.82"
-axum = "0.7.5"
 chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive"] }
 metacall = "0.4.0"
 nu-ansi-term = "0.50.0"
+
+axum = "0.7.5"
 tokio = { version = "1.36.0", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
-logger = { path = "crates/logger" }
+
 swc_common = "0.33.26"
 swc_ecma_ast = "0.113.2"
 swc_ecma_parser = "0.144.1"
@@ -27,8 +28,16 @@ swc = "0.275.0"
 swc_ecma_codegen = "0.149.1"
 swc_ecma_transforms_base = "0.138.2"
 
+logger = { path = "crates/logger" }
+metassr-core = { path = "crates/metassr-core" }
+
 [workspace]
-members = ["crates/logger", "crates/metassr-swc", "metassr-cli"]
+members = [
+    "crates/logger",
+    "crates/metassr-core",
+    "crates/metassr-swc",
+    "metassr-cli",
+]
 
 [[bin]]
 name = "metassr-cli"
