test: some changes in test sample (static serving)

--- a/crates/metassr-core/Cargo.toml
+++ b/crates/metassr-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "metassr-core"
-version = "0.1.0"
+version = "0.0.1-alpha"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,5 +10,5 @@ anyhow = "1.0.82"
 axum = "0.7.5"
 chrono = "0.4.38"
 tokio = { version = "1.36.0", features = ["full"] }
-tower-http = { version = "0.5.2", features = ["trace"] }
+tower-http = { version = "0.5.2", features = ["trace", "fs"] }
 tracing = "0.1.40"
