--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ nu-ansi-term = "0.50.0"
 
 axum = "0.7.5"
 tokio = { version = "1.36.0", features = ["full"] }
-tower-http = { version = "0.5.2", features = ["trace"] }
+tower-http = { version = "0.5.2", features = ["trace", "fs"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
 
