--- a/metassr-cli/Cargo.toml
+++ b/metassr-cli/Cargo.toml
@@ -18,3 +18,4 @@ tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
 
 logger = { path = "../crates/logger" }
 metassr-core = { path = "../crates/metassr-core" }
+metassr-build = { path = "../crates/metassr-build" }
