--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ swc_ecma_transforms_base = "0.138.2"
 logger = { path = "crates/logger" }
 metassr-core = { path = "crates/metassr-core" }
 metassr-build = { path = "crates/metassr-build" }
+metassr-utils = { path = "crates/metassr-utils" }
 walkdir = "2.5.0"
 
 [workspace]
