--- a/crates/metassr-build/Cargo.toml
+++ b/crates/metassr-build/Cargo.toml
@@ -9,3 +9,4 @@ description = "Web builder & client bundler (built on Rspack), built for MetaSSR
 metacall = "0.4.0"
 anyhow = "1.0.82"
 serde_json = "1.0.120"
+metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
