--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,9 @@ logger = { path = "crates/logger" }
 metassr-core = { path = "crates/metassr-core" }
 metassr-build = { path = "crates/metassr-build" }
 metassr-utils = { path = "crates/metassr-utils" }
+html-generator = { path = "crates/html-generator" }
 walkdir = "2.5.0"
+serde_json = "1.0.120"
 
 [workspace]
 members = [
