--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ metassr-utils = { path = "crates/metassr-utils" }
 html-generator = { path = "crates/html-generator" }
 walkdir = "2.5.0"
 serde_json = "1.0.120"
+lazy_static = "1.5.0"
 
 [workspace]
 members = [
