--- a/crates/metassr-build/Cargo.toml
+++ b/crates/metassr-build/Cargo.toml
@@ -10,3 +10,5 @@ metacall = "0.4.0"
 anyhow = "1.0.82"
 serde_json = "1.0.120"
 metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
+html-generator = { path = "../html-generator" }
+lazy_static = "1.5.0"
