--- a/crates/metassr-core/Cargo.toml
+++ b/crates/metassr-core/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 anyhow = "1.0.82"
 axum = "0.7.5"
 chrono = "0.4.38"
+metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
+serde_json = "1.0.122"
 tokio = { version = "1.36.0", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["trace", "fs"] }
 tracing = "0.1.40"
