--- a/crates/metassr-build/Cargo.toml
+++ b/crates/metassr-build/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0.120"
 metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
 html-generator = { path = "../html-generator" }
 lazy_static = "1.5.0"
+serde = { version = "1.0.207", features = ["derive"] }
