--- a/crates/metassr-utils/Cargo.toml
+++ b/crates/metassr-utils/Cargo.toml
@@ -7,4 +7,5 @@ description = "Important utilites for MetaSSR"
 
 [dependencies]
 anyhow = "1.0.86"
+serde = {version = "1.0.207", features = ["derive"]}
 walkdir = "2.5.0"
