--- a/crates/metassr-server/Cargo.toml
+++ b/crates/metassr-server/Cargo.toml
@@ -13,4 +13,6 @@ metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
 serde_json = "1.0.122"
 tokio = { version = "1.36.0", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["trace", "fs"] }
+tower-layer = "0.3.3"
+tower-service = "0.3.3"
 tracing = "0.1.40"
