--- a/crates/metassr-server/Cargo.toml
+++ b/crates/metassr-server/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.82"
 axum = "0.7.5"
 chrono = "0.4.38"
+metassr-build = { version = "0.1.0", path = "../metassr-build" }
 metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
 serde_json = "1.0.122"
 tokio = { version = "1.36.0", features = ["full"] }
