--- a/crates/metassr-create/Cargo.toml
+++ b/crates/metassr-create/Cargo.toml
@@ -2,6 +2,9 @@
 name = "metassr-create"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies]
+walkdir = "2.5.0"
