--- a/crates/metassr-create/templates/javascript/package.json
+++ b/crates/metassr-create/templates/javascript/package.json
@@ -5,18 +5,11 @@
   "scripts": {
     "run": "metassr-cli --debug-mode=http run",
     "build:ssr": "metassr-cli --debug-mode=metacall build -t ssr",
-    "serve:ssg": "metassr-cli --debug-mode=http run --serve",
-    "build:ssg": "metassr-cli --debug-mode=metacall build -t ssg",
-    "dev": "rspack --watch"
+    "serve": "metassr-cli --debug-mode=http run --serve",
+    "build:ssg": "metassr-cli --debug-mode=metacall build -t ssg"
   },
   "devDependencies": {
-    "@rspack/cli": "^0.7.5",
-    "@rspack/core": "^0.7.5",
-    "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.4.16",
-    "@swc/helpers": "^0.5.11",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8"
+    "@rspack/core": "^0.7.5"
   },
   "dependencies": {
     "react": "^18.3.1",
