refactor: move web-bundler to a stand-alone crate called `metassr-bundler`

--- a/crates/metassr-build/Cargo.toml
+++ b/crates/metassr-build/Cargo.toml
@@ -13,3 +13,4 @@ metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
 html-generator = { path = "../html-generator" }
 lazy_static = "1.5.0"
 serde = { version = "1.0.207", features = ["derive"] }
+metassr-bundler = { version = "0.1.0", path = "../metassr-bundler" }
