--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ serde = "1.0.207"
 tower-layer = "0.3.3"
 tower-service = "0.3.3"
 metassr-create = { version = "0.1.0", path = "crates/metassr-create" }
+metassr-bundler = { version = "0.1.0", path = "crates/metassr-bundler" }
 
 [workspace]
 members = [
@@ -40,7 +41,7 @@ members = [
     "crates/metassr-utils",
     "crates/html-generator",
     "metassr-cli",
-    "crates/metassr-create",
+    "crates/metassr-create", "crates/metassr-bundler",
 ]
 
 [[bin]]
