--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,8 @@ html-generator = { path = "crates/html-generator" }
 serde = "1.0.207"
 tower-layer = "0.3.3"
 tower-service = "0.3.3"
-metassr-create = { version = "0.1.0", path = "crates/metassr-create" }
-metassr-bundler = { version = "0.1.0", path = "crates/metassr-bundler" }
+metassr-create = { path = "crates/metassr-create" }
+metassr-bundler = { path = "crates/metassr-bundler" }
 
 [workspace]
 members = [
