--- a/crates/html-generator/Cargo.toml
+++ b/crates/html-generator/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "html-generator"
-version = "0.1.0"
+version = "0.0.1-alpha"
 edition = "2021"
 description = "A simple library to generate html content with a simple way."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
