--- a/crates/metassr-build/Cargo.toml
+++ b/crates/metassr-build/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "metassr-build"
-version = "0.1.0"
+version = "0.0.1-alpha"
 edition = "2021"
 description = "Web builder & client bundler (built on Rspack), built for MetaSSR."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,8 +9,8 @@ description = "Web builder & client bundler (built on Rspack), built for MetaSSR
 metacall = "0.4.1"
 anyhow = "1.0.82"
 serde_json = "1.0.120"
-metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
+metassr-utils = { path = "../metassr-utils" }
 html-generator = { path = "../html-generator" }
 lazy_static = "1.5.0"
 serde = { version = "1.0.207", features = ["derive"] }
-metassr-bundler = { version = "0.1.0", path = "../metassr-bundler" }
+metassr-bundler = { path = "../metassr-bundler" }
