--- a/crates/metassr-bundler/Cargo.toml
+++ b/crates/metassr-bundler/Cargo.toml
@@ -9,5 +9,5 @@ description = "A simple crate is used for web bundling built on Metacall and Rsp
 anyhow = "1.0.86"
 lazy_static = "1.5.0"
 metacall = "0.4.1"
-metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
+metassr-utils = { path = "../metassr-utils" }
 serde_json = "1.0.128"
