--- a/crates/metassr-server/Cargo.toml
+++ b/crates/metassr-server/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 anyhow = "1.0.82"
 axum = "0.7.5"
 chrono = "0.4.38"
-metassr-build = { version = "0.1.0", path = "../metassr-build" }
-metassr-utils = { version = "0.1.0", path = "../metassr-utils" }
+metassr-build = { path = "../metassr-build" }
+metassr-utils = { path = "../metassr-utils" }
 serde_json = "1.0.122"
 tokio = { version = "1.36.0", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["trace", "fs"] }
