--- a/crates/metassr-bundler/Cargo.toml
+++ b/crates/metassr-bundler/Cargo.toml
@@ -11,3 +11,4 @@ lazy_static = "1.5.0"
 metacall = "0.4.1"
 metassr-utils = { path = "../metassr-utils" }
 serde_json = "1.0.128"
+tracing = "0.1.40"
