--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 authors = ["Mohamed Emad (hulxxv@gmail.com)"]
 description = "Another SSR framework but built with MetaCall!"
 
-
 [dependencies]
 anyhow = "1.0.82"
 chrono = "0.4.38"
@@ -32,6 +31,7 @@ tower-layer = "0.3.3"
 tower-service = "0.3.3"
 metassr-create = { path = "crates/metassr-create" }
 metassr-bundler = { path = "crates/metassr-bundler" }
+metassr-fs-analyzer = { path = "crates/metassr-fs-analyzer" }
 
 [workspace]
 members = [
@@ -41,7 +41,9 @@ members = [
     "crates/metassr-utils",
     "crates/html-generator",
     "metassr-cli",
-    "crates/metassr-create", "crates/metassr-bundler",
+    "crates/metassr-create",
+    "crates/metassr-bundler",
+    "crates/metassr-fs-analyzer",
 ]
 
 [[bin]]
