--- a/crates/metassr-server/Cargo.toml
+++ b/crates/metassr-server/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.82"
 axum = "0.7.5"
 chrono = "0.4.38"
 metassr-build = { path = "../metassr-build" }
+metassr-fs-analyzer = { path = "../metassr-fs-analyzer" }
 metassr-utils = { path = "../metassr-utils" }
 serde_json = "1.0.122"
 tokio = { version = "1.36.0", features = ["full"] }
