fix(createor): invalid comma in `package.json` in ts tempalte
Fix #20

--- a/crates/metassr-create/templates/typescript/package.json
+++ b/crates/metassr-create/templates/typescript/package.json
@@ -10,7 +10,7 @@
     "dev": "rspack --watch"
   },
   "devDependencies": {
-    "@rspack/core": "^0.7.5",
+    "@rspack/core": "^0.7.5"
   },
   "dependencies": {
     "react": "^18.3.1",
